# oss4climate

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  app.py  makefile  pyproject.toml  repo_index.toml  requirements-app.txt  security-fixes.md  state.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: data_update.yaml  generate_listing.yaml  publish.yaml  pull_request.yaml  repo-assist.lock.yml  repo-assist.md
docs/: typesense_backend.md
indexes/: listings.json  listings.toml  repositories.toml
notebooks/: README.md  osstech_study.py  repo_classification.ipynb
search_backend/: example_of_typesense_operations.py  seed_typesense_instance.py  typesense.md
search_backend/mcp/: llm_example.py  server_example.py
src/app/: __init__.py
src/app/static/css/: styles.css
src/app/templates/: _base.html  _navbar.html  about.html  results.html  search.html
src/oss4climate/: cli.py
src/oss4climate/scripts/: __init__.py  data_publication.py  discover_new_sources.py  listing_search.py  repository_scraping.py
src/oss4climate/src/: config.py  crawler.py  helpers.py  log.py  model.py  models.py  scraper.py
src/oss4climate/src/database/: __init__.py  projects.py
src/oss4climate/src/nlp/: __init__.py  classifiers.py  html_io.py  markdown_io.py  plaintext.py  rst_io.py  search.py  search_engine.py
src/oss4climate/src/parsers/: __init__.py  bitbucket_data_io.py  codeberg_data_io.py  exceptions.py  git_repository.py  github_data_io.py  gitlab_data_io.py  lfenergy.py  licenses.py  listings.py  opensustain_tech.py  website.py
src/oss4climate/src/parsers/git_platforms/: bitbucket_io.py  codeberg_io.py  common.py  github_io.py  gitlab_io.py
src/oss4climate/src/parsers/listings/: __init__.py  lfenergy.py  opensustain_tech.py
src/oss4climate/src/search/: listing_search.py
src/oss4climate_app/: __init__.py  config.py  seed_typesense.py  test_app.py
src/oss4climate_app/src/: config.py  data_io.py  log_activity.py  templates.py  theme.py
src/oss4climate_app/src/database/: __init__.py
src/oss4climate_app/src/mcp_server/: __init__.py
src/oss4climate_app/src/routers/: __init__.py  api.py  ui.py
src/oss4climate_app/src/search/: typesense_io.py
src/oss4climate_app/static/css/: styles-v2.css  styles.css
src/oss4climate_app/templates/: _base.html  _navbar.html  about.html  privacy.html  results.html  robots.txt  search.html  sitemap.xml
src/oss4climate_app/templates/v2/: _base.html  about.html  privacy.html  results.html  search.html
src/oss4climate_mcp/: llm_assistant.py  main.py
src/oss4climate_scripts/: cli.py
src/oss4climate_scripts/scripts/: __init__.py  data_publication.py  discover_new_sources.py  listing_search.py  misc.py  opensustain_csv_build.py  repository_scraping.py
src/oss4climate_scripts/src/: config.py  search.py  utils.py
src/test/: conftest.py
src/test/data_for_tests/: _generate_test_data.py  listing.csv
src/test/oss4climate/: test_helpers.py  test_imports.py
src/test/oss4climate/nlp/: test_io.py
src/test/oss4climate/parsers/: test_github_data_io.py  test_gitlab_data_io.py
src/test/oss4climate/parsers/git_platforms/: test_bitbucket_io.py  test_codeberg_io.py  test_github_io.py  test_gitlab_io.py
src/test/oss4climate_app/: conftest.py  test_app.py  test_mcp.py
src/test/oss4climate_mcp/: test_mcp.py
src/test/oss4climate_scripts/: test_imports.py
