[project]
name = "oss4climate"
version = "0.7.2"
readme = "README.md"
description = "Package to create listings of Open Source for Energy"
authors = [
    { name = "Pierre V-F", email = "hello@pierrevf.com"}
]

requires-python = ">=3.12, <3.14"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "docutils>=0.22.3",
    "jinja2>=3.1.6",
    "markdown>=3.10",
    "pandas>=3.0,<4",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.7.1",
    "requests>=2.33.1",
    "sqlmodel>=0.0.27",
    "tomlkit>=0.13.3",
    "tqdm>=4.67.1",
    "typesense>=2.0.0",
    "pyyaml>=6.0.3",
    # Security forces below (not actual direct dependencies)
    "cryptography>=46.0.7",
    "authlib>=1.6.11",
    "python-multipart>=0.0.27",
]
packages = [
    "src/oss4climate",
    "src/oss4climate_scripts",
    "src/oss4climate_app",
    "src/oss4climate_mcp",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
scripts = [
    "black>=26.3.1",
    "ruff>=0.15.12",
    "typer>=0.25.1",
]
test = [
    "pytest>=9.0.3",
    "httpx>=0.28.1",
    "coverage>=7.11.3",
    "pytest-asyncio>=1.3.0",
    # Security only:
    "pygments>=2.20.0",
]
app = [
    "fastapi>=0.136.1",
    "gunicorn>=23.0.0",
    "sentry-sdk[fastapi]>=2.58.0",
    "uvicorn[standard]>=0.42.0",
    "fastmcp>=3.2, <4",
]
mcp = [
    "pydantic-ai-slim[mistral,anthropic,fastmcp,cli]>=1.68.0",
    # Security only:
    "anthropic>=0.87.0"
]
